kubernetes/api-monitor-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-monitor-service
  namespace: infra-app
spec:
  selector:
    app: api-monitor
  ports:
    - port: 3001
      targetPort: 3001
  type: NodePort
