kubernetes/api-monitor-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-monitor-ingress
  namespace: infra-app
spec:
  rules:
    - host: api-monitor.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-monitor-service
                port:
                  number: 3001
